deploy/kubernetes/devel/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-cwxgoweb
  namespace: cwx
  labels:
    app: dev-cwxgoweb

spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-cwxgoweb
  template:
    metadata:
      labels:
        app: dev-cwxgoweb
    spec:
      restartPolicy: Always
      containers:
      - name: dev-cwxgoweb
        image: registry.services.wait/cwx/cwxgoweb:latest
        ports:
        - containerPort: 19002
