deploy/kubernetes/devel/IngressRoute.yml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dev-cwxgoweb
  namespace: cwx
  annotations:
    kubernetes.io/ingress.class: "traefik-class"

spec:
  entryPoints:
    - https
  routes:
    - match: Host(`dev-cwxgoweb.services.wait`)
      kind: Rule
      services:
        - name: dev-cwxgoweb
          namespace: cwx
          port: 80
  tls:
    secretName: key-services-wait
